<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="343dp"
        android:layout_height="186dp"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:text="@string/color_pick"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/colorWhiteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/colorWhiteButton"
        android:layout_width="169dp"
        android:layout_height="94dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="227dp"
        android:text="@string/color_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/colorBlackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/colorBlackButton"
        android:layout_width="173dp"
        android:layout_height="96dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="225dp"
        android:text="@string/color_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/colorWhiteButton"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>